--- a/web/css/style.css
+++ b/web/css/style.css
@@ -72,6 +72,7 @@ h1{
 	height: 500px;
 	margin-bottom: -150px;
 	margin-top: -150px;
+	pointer-events: none;
 }
 #home select{
 	font-family: "TW cen MT Condensed";
@@ -95,6 +96,9 @@ h1{
 	margin-top: 0px;
 	padding-bottom: 2px;
 	font-size: 28px;
+}
+#home button:hover{
+	cursor: pointer;
 }
 #home .search__form{
 	display: flex;
