--- a/web/css/style.css
+++ b/web/css/style.css
@@ -152,7 +152,7 @@ h1{
 
 #data__container{
 	width: 84%;
-	height: 94%;
+	height: 88%;
 	top: 0;
 	margin-left: 100%;
 	transition: 1s;
@@ -356,4 +356,133 @@ input.gender:checked + label.gender, input.gender:checked + label.gender:after {
 	top: -3px;
 	font-family: "TW cen MT Condensed";
 	color: #68e3b9;
+}
+
+#loader{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+#loader > .piece{
+	position: absolute;
+	width: 10px;
+	height: 10px;
+	display: inline-block;
+	border-radius: 5px;
+	margin: 0px 1px;
+	top: -5px;
+}
+#loader > .piece.one{
+	height: 30px;
+	animation: piece-0 3.2s infinite;
+	animation-delay:0;
+	left: 0;
+	background: #FC3D81;
+}
+@keyframes piece-0 {
+	0%, 10%, 90%, 100%{
+		height: 10px;
+		top: -5px;
+	}
+	45%, 55%{
+		height: 30px;
+		top: -15px;
+	}
+}
+#loader > .piece.two{
+	height: 60px;
+	animation: piece-1 3.2s infinite;
+	animation-delay: 0.15s;
+	left: 16px;
+	background: #009EFF;
+}
+@keyframes piece-1 {
+ 0%, 10%, 90%, 100%{
+	height: 10px;
+	top: -5px;
+ }
+ 45%, 55%{
+	height: 60px;
+	top: -31px;
+ }
+}
+#loader > .piece.three{
+	height: 80px;
+	animation: piece-2 3.2s infinite;
+	animation-delay: 0.30s;
+	left: 32px;
+	background: #FC3D81;
+}
+@keyframes piece-2 {
+ 0%, 10%, 90%, 100%{
+	height: 10px;
+	top: -5px;
+ }
+ 45%, 55%{
+	height: 80px;
+	top: -37px;
+ }
+}
+#loader > .piece.four{
+	height: 90px;
+	animation: piece-3 3.2s infinite;
+	animation-delay: 0.45s;
+	left: 48px;
+	background: #009EFF;
+}
+@keyframes piece-3 {
+ 0%, 10%, 90%, 100%{
+	height: 10px;
+	top: -5px;
+ }
+ 45%, 55%{
+	height: 90px;
+	top: -31px;
+ }
+}
+#loader > .piece.five{
+	height: 94px;
+	animation: piece-4 3.2s infinite;
+	animation-delay: 0.60s;
+	left: 64px;
+	background: #FC3D81;
+}
+@keyframes piece-4 {
+  0%, 10%, 90%, 100%{
+	height: 10px;
+	top: -5px;
+ }
+ 45%, 55%{
+	height: 94px;
+	top: -23px;
+ }
+}
+#loader > .piece.six{
+	height: 90px;
+	animation: piece-3 3.2s infinite;
+	animation-delay: 0.85s;
+	left: 80px;
+	background: #009EFF;
+}
+#loader > .piece.seven{
+	height: 80px;
+	animation: piece-2 3.2s infinite;
+	animation-delay: 1s;
+	left: 96px;
+	background: #FC3D81;
+}
+#loader > .piece.eight{
+	height: 60px;
+	animation: piece-1 3.2s infinite;
+	animation-delay: 1.15s;
+	left: 112px;
+	background: #009EFF;
+}
+#loader > .piece.nine{
+	height: 30px;
+	animation: piece-0 3.2s infinite;
+	animation-delay: 1.30s;
+	left: 128px;
+	background: #FC3D81;
 }
